# v1-162-part1-reviewed

v1-162-part1/: README.md  pyproject.toml
v1-162-part1/app/: server.py
v1-162-part1/rag-data-loader/: rag_load_and_process.py  requirements.txt
